--- a/people/elle.yaml
+++ b/people/elle.yaml
@@ -12,6 +12,7 @@ group:
   elle_present:
     name: "Elle"
     entities: &presence_entities
+    - device_tracker.elles_iphone
     - device_tracker.elle_iphone
     - device_tracker.elle_iphone_bt
     - device_tracker.elle_laptop
@@ -33,6 +34,12 @@ binary_sensor:
       - entity_id: device_tracker.elle_iphone_bt
         prob_given_true: 0.3
         prob_given_false: 0.1
+        <<: *tracker_default
+
+      # mobile app
+      - entity_id: device_tracker.elles_iphone
+        prob_given_true: 0.4
+        prob_given_false: 0.2
         <<: *tracker_default
 
       - entity_id: device_tracker.elle_laptop
