--- a/google-assistant.yaml
+++ b/google-assistant.yaml
@@ -1,3 +1,3 @@
 project_id: whalebarn-home-assistant
-api_key: !secret gcm_api_key
 expose_by_default: false
+service_account: !include private/dev-home-assistant-1e5f25facb23.json
