--- a/configuration.yaml
+++ b/configuration.yaml
@@ -20,7 +20,7 @@ homeassistant:
     package_aneta: !include people/aneta.yaml
     package_monica: !include people/monica.yaml
     package_olga: !include people/olga.yaml
-    # package_elle: !include people/elle.yaml
+    package_elle: !include people/elle.yaml
 
 
     package_aeotec_multisensor: !include packages/aeotec_multisensor.yaml
