--- a/packages/hall/annex-hall-heating-on-demand.yaml
+++ b/packages/hall/annex-hall-heating-on-demand.yaml
@@ -11,7 +11,7 @@ group:
   g_debug_annex_hall_heating:
     entities:
       - climate.annex_hall_thermostat
-      - climate.annex_hall_comfort_setpoint
+      - climate.annex_hall_mode
       - switch.annex_hall_demand
 
   g_debug_annex_hall_temperature:
@@ -24,7 +24,7 @@ group:
   #  Name is mapped from climate.foo_thermostat -> group.g_foo_thermostat
   g_annex_hall_thermostat:
     entities:
-      - climate.annex_hall_comfort_setpoint
+      - climate.annex_hall_mode
 
 climate:
   - name: annex_hall_thermostat
