--- a/packages/guest_room/heating-on-demand.yaml
+++ b/packages/guest_room/heating-on-demand.yaml
@@ -11,7 +11,7 @@ group:
   g_debug_guest_room_heating:
     entities:
       - climate.guest_room_thermostat
-      - climate.guest_room_heat
+      - climate.guest_room_mode
       - switch.guest_room_demand
 
   g_debug_guest_room_temperature:
@@ -24,7 +24,7 @@ group:
   #  Name is mapped from climate.foo_thermostat -> group.g_foo_thermostat
   g_guest_room_thermostat:
     entities:
-      - climate.guest_room_heat
+      - climate.guest_room_mode
 
 climate:
   - name: guest_room_thermostat
@@ -84,7 +84,7 @@ automation:
   - alias: "guest_room_update_setpoint"
     trigger:
       - platform: state
-        entity_id: climate.guest_room_heat
+        entity_id: climate.guest_room_mode
     action:
       - service: climate.set_temperature
         data_template:
