--- a/packages/guest_room/room.yaml
+++ b/packages/guest_room/room.yaml
@@ -13,7 +13,7 @@ homeassistant:
       friendly_name: "Guest Room Battery"
       icon: mdi:battery
 
-    climate.guest_room_heat:
+    climate.guest_room_mode:
       friendly_name: Guest Room
       min_temp: 8
       max_temp: 25
@@ -31,7 +31,7 @@ group:
   guest_room_setpoints:
     name: Guest Room Setpoints
     entities:
-    - climate.guest_room_heat
+    - climate.guest_room_mode
 
   guest_room_lights:
     name: Guest Room Lights
