zwave 43 is bedroom_main2, zwave 59 is bedroom_main3
Node 43 was annex_hall.
Node 59 was bedroom_anne.

--- a/groups.yaml
+++ b/groups.yaml
@@ -204,8 +204,8 @@ thermostat_devices:
   - climate.guest_room_mode
   - climate.danfoss_z_thermostat_014g0013_heating_1
   - climate.bedroom_annex2_mode
-  - climate.bedroom_main2_heat
-  - climate.bedroom_main3_heat
+  - climate.bedroom_main2_mode
+  - climate.bedroom_main3_mode
 
 # Front-end thermostats
 thermostats:
