--- a/packages/bedroom-main2/room.yaml
+++ b/packages/bedroom-main2/room.yaml
@@ -6,7 +6,7 @@ homeassistant:
   customize:
     sensor.bedroom_main2_battery:
       icon: mdi:battery
-    climate.bedroom_main2_heat:
+    climate.bedroom_main2_mode:
       min_temp: 8
       max_temp: 25
 
@@ -21,7 +21,7 @@ group:
 
   bedroom_main2_setpoints:
     entities:
-    - climate.bedroom_main2_heat
+    - climate.bedroom_main2_mode
 
   bedroom_main2_lights:
 
