ui: update RFX switches and sensors

--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -623,26 +623,32 @@ views:
         title: RFX Switches
         show_header_toggle: true
         entities:
-          - switch.0a140003f15c7202010080
-          - switch.0a140006f15c7203010080
-          - switch.0a140009f3cf3510020080
-          - switch.0a140002f40fa810020050
-          - switch.0a140001f40fa810050040
-          - switch.0a14000cf40fa910020040
-          - switch.0a140083f3cf3510020070
-          - switch.0a140084f3cf3510030070
-          - switch.0a140087f3cf3510040070
-          - switch.0a140086f3cf3510050070
+          - switch.lightwaverf_siemens_f15c72_1
+          - switch.lightwaverf_siemens_f15c72_2
+          - switch.lightwaverf_siemens_f15c72_3
+          - light.lightwaverf_siemens_f3cf35_1
+          - light.lightwaverf_siemens_f3cf35_2
+          - light.lightwaverf_siemens_f3cf35_3
+          - light.lightwaverf_siemens_f3cf35_4
+          - switch.lightwaverf_siemens_f3cf35_16
+          - switch.lightwaverf_siemens_f40fa8_1
+          - switch.lightwaverf_siemens_f40fa8_16
+          - switch.lightwaverf_siemens_f40fa9_16
       - type: entities
-        title: RFX Lights
+        title: RFX Binary Sensors
         show_header_toggle: true
         entities:
-          - switch.0a140000f40fa801010050
-          - switch.0a140016f3cf3501010080
-          - switch.0a140022f3cf3502010080
-          - switch.0a140023f3cf3503010080
-          - switch.0a140024f3cf3504010080
-          - switch.0a140000f15c7201010080
+          - binary_sensor.lightwaverf_siemens_f15c72_1
+          - binary_sensor.lightwaverf_siemens_f15c72_2
+          - binary_sensor.lightwaverf_siemens_f15c72_3
+          - binary_sensor.lightwaverf_siemens_f3cf35_1
+          - binary_sensor.lightwaverf_siemens_f3cf35_2
+          - binary_sensor.lightwaverf_siemens_f3cf35_3
+          - binary_sensor.lightwaverf_siemens_f3cf35_4
+          - binary_sensor.lightwaverf_siemens_f3cf35_16
+          - binary_sensor.lightwaverf_siemens_f40fa8_1
+          - binary_sensor.lightwaverf_siemens_f40fa8_16
+          - binary_sensor.lightwaverf_siemens_f40fa9_16
       - type: entities
         title: Amazon Dash Buttons
         show_header_toggle: false
